SaXAudio/Exports.h

    /// <summary>
    /// Pause the voice and increase the pause stack.
    /// About the pause stack: if a voice is paused more than once, it will take
    /// the same amount of resumes for it to start playing again.
    /// </summary>
    /// <param name="voiceID">The voice to pause</param>
    /// <param name="fade">The duration of the fade in seconds</param>
    /// <returns>value of the pause stack</returns>
    EXPORT UINT32 Pause(const INT32 voiceID, const FLOAT fade = 0.1f);
    /// <summary>
    /// Reduce the pause stack and resume playing the voice if the stack becomes empty
    /// </summary>
    /// <param name="voiceID">The voice to resume</param>
    /// <param name="fade">The duration of the fade in seconds</param>
    /// <returns>value of the pause stack</returns>
    EXPORT UINT32 Resume(const INT32 voiceID, const FLOAT fade = 0.1f);
    /// <summary>
    /// Gets the pause stack value of the specified voice, 0 if empty
    /// </summary>
    /// <param name="voiceID">The voice to check</param>
    /// <returns>The current pause stack value</returns>
    EXPORT UINT32 GetPauseStack(const INT32 voiceID);
    /// <summary>
    /// Set the master volume
    /// </summary>
    /// <param name="volume">Master volume [0, 1]</param>
    /// <param name="fade">Fade duration in seconds</param>
    EXPORT void SetMasterVolume(const FLOAT volume, const FLOAT fade = 0);
    /// <summary>
    /// Sets the volume of the voice or bus
    /// </summary>
    /// <param name="voiceID">The voice or bus ID to modify</param>
    /// <param name="volume">Volume level [0, 1]</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
    EXPORT void SetVolume(const INT32 voiceID, const FLOAT volume, const FLOAT fade = 0, BOOL isBus = false);
    /// <summary>
    /// Sets the playback speed of the voice
    /// This will affect the pitch of the audio
    /// </summary>
    /// <param name="voiceID">The voice to modify</param>
    /// <param name="speed">Playback speed multiplier</param>
    /// <param name="fade">Fade duration in seconds</param>
    EXPORT void SetSpeed(const INT32 voiceID, const FLOAT speed, const FLOAT fade = 0);
    /// <summary>
    /// Sets the panning of the voice
    /// </summary>
    /// <param name="voiceID">The voice to modify</param>
    /// <param name="panning">Pan position [-1, 1] where -1 is full left, 1 is full right</param>
    /// <param name="fade">Fade duration in seconds</param>
    EXPORT void SetPanning(const INT32 voiceID, const FLOAT panning, const FLOAT fade = 0);
    /// <summary>
    /// Sets if the voice should loop
    /// </summary>
    /// <param name="voiceID">The voice to modify</param>
    /// <param name="looping">true to enable looping, false to disable</param>
    EXPORT void SetLooping(const INT32 voiceID, const BOOL looping);
    /// <summary>
    /// Sets the start and end looping points
    /// By default the looping points are [0, last sample]
    /// </summary>
    /// <param name="voiceID">The voice to modify</param>
    /// <param name="start">Loop start position in samples</param>
    /// <param name="end">Loop end position in samples</param>
    EXPORT void SetLoopPoints(const INT32 voiceID, const UINT32 start, const UINT32 end);
    /// <summary>
    /// Get the master volume
    /// </summary>
    /// <returns>Master volume [0, 1]</returns>
    EXPORT FLOAT GetMasterVolume();
    /// <summary>
    /// Gets the volume of the specified voice
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>Volume level [0, 1]</returns>
    EXPORT FLOAT GetVolume(const INT32 voiceID);
    /// <summary>
    /// Gets the speed of the specified voice
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>Playback speed multiplier</returns>
    EXPORT FLOAT GetSpeed(const INT32 voiceID);
    /// <summary>
    /// Gets the panning of the specified voice
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>Pan position [-1, 1] where -1 is full left, 1 is full right</returns>
    EXPORT FLOAT GetPanning(const INT32 voiceID);
    /// <summary>
    /// Gets whether the specified voice is looping
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>true if looping is enabled, false otherwise</returns>
    EXPORT BOOL GetLooping(const INT32 voiceID);
    /// <summary>
    /// Gets the loop start point
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>Loop start position in samples</returns>
    EXPORT UINT32 GetLoopStart(const INT32 voiceID);
    /// <summary>
    /// Gets the loop end point
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>Loop end position in samples</returns>
    EXPORT UINT32 GetLoopEnd(const INT32 voiceID);
    /// <summary>
    /// Add/Modify the reverb effect to a voice or bus
    /// </summary>
    /// <param name="voiceID">The voice or bus ID to modify</param>
    /// <param name="reverbParams">Reverb parameters</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
    EXPORT void SetReverb(const INT32 voiceID, const XAUDIO2FX_REVERB_PARAMETERS reverbParams, const FLOAT fade = 0, BOOL isBus = false);
    /// <summary>
    /// Remove the reverb effect from a voice or bus
    /// </summary>
    /// <param name="voiceID">The voice or bus ID to modify</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
    EXPORT void RemoveReverb(const INT32 voiceID, const FLOAT fade = 0, BOOL isBus = false);
    /// <summary>
    /// Add/Modify the EQ effect to a voice or bus
    /// </summary>
    /// <param name="voiceID">The voice or bus ID to modify</param>
    /// <param name="eqParams">EQ parameters</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
    EXPORT void SetEq(const INT32 voiceID, const FXEQ_PARAMETERS eqParams, const FLOAT fade = 0, BOOL isBus = false);
    /// <summary>
    /// Remove the EQ effect from a voice or bus
    /// </summary>
    /// <param name="voiceID">The voice or bus ID to modify</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
    EXPORT void RemoveEq(const INT32 voiceID, const FLOAT fade = 0, BOOL isBus = false);
    /// <summary>
    /// Add/Modify the echo effect to a voice or bus
    /// </summary>
    /// <param name="voiceID">The voice or bus ID to modify</param>
    /// <param name="echoParams">Echo parameters</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
    EXPORT void SetEcho(const INT32 voiceID, const FXECHO_PARAMETERS echoParams, const FLOAT fade = 0, BOOL isBus = false);
    /// <summary>
    /// Remove the echo effect from a voice or bus
    /// </summary>
    /// <param name="voiceID">The voice or bus ID to modify</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
    EXPORT void RemoveEcho(const INT32 voiceID, const FLOAT fade = 0, BOOL isBus = false);
    /// <summary>
    /// Gets the position of the playing voice in samples
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>sample position if playing or 0</returns>
    EXPORT UINT32 GetPositionSample(const INT32 voiceID);
    /// <summary>
    /// Gets the position of the playing voice in seconds
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>position in seconds if playing or 0</returns>
    EXPORT FLOAT GetPositionTime(const INT32 voiceID);
    /// <summary>
    /// Gets the total amount of samples of the voice
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>Total number of samples in the audio</returns>
    EXPORT UINT32 GetTotalSample(const INT32 voiceID);
    /// <summary>
    /// Gets the total time, in seconds, of the voice
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>Total duration in seconds</returns>
    EXPORT FLOAT GetTotalTime(const INT32 voiceID);
    /// <summary>
    /// Get the sample rate of the audio data
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>sample rate in Hz</returns>
    EXPORT UINT32 GetSampleRate(const INT32 voiceID);
    /// <summary>
    /// Get the number of channels of the audio data
    /// </summary>
    /// <param name="voiceID">The voice to query</param>
    /// <returns>number of channels (1=mono, 2=stereo, etc)</returns>
    EXPORT UINT32 GetChannelCount(const INT32 voiceID);
    /// <summary>
    /// Get the number of voices
    /// </summary>
    /// <param name="bankID">Filter by bankID or 0 for any bankID</param>
    /// <param name="busID">Filter by BusID or 0 for any busID</param>
    /// <returns>Number of currently active voices</returns>
    EXPORT UINT32 GetVoiceCount(const INT32 bankID = 0, const INT32 busID = 0);
    /// <summary>
    /// Get the number of loaded audio banks
    /// </summary>
    /// <returns>Number of loaded banks</returns>
    EXPORT UINT32 GetBankCount();