SaXAudio/CSharp-Interface/SaXAudio.cs


        /// <summary>
        /// Pause the voice and increase the pause stack.
        /// About the pause stack: if a voice is paused more than once, it will take
        /// the same amount of resumes for it to start playing again.
        /// </summary>
        /// <param name="voiceID">The voice to pause</param>
        /// <param name="fade">The duration of the fade in seconds</param>
        /// <returns>value of the pause stack</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 Pause(Int32 voiceID, Single fade = 0.1f);

        /// <summary>
        /// Reduce the pause stack and resume playing the voice if the stack becomes empty
        /// </summary>
        /// <param name="voiceID">The voice to resume</param>
        /// <param name="fade">The duration of the fade in seconds</param>
        /// <returns>value of the pause stack</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 Resume(Int32 voiceID, Single fade = 0.1f);

        /// <summary>
        /// Gets the pause stack value of the specified voice, 0 if empty
        /// </summary>
        /// <param name="voiceID">The voice to check</param>
        /// <returns>The current pause stack value</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetPauseStack(Int32 voiceID);

        /// <summary>
        /// Set the master volume
        /// </summary>
        /// <param name="volume">Master volume [0, 1]</param>
        /// <param name="fade">Fade duration in seconds</param>
        [DllImport("SaXAudio")]
        public static extern void SetMasterVolume(Single volume, Single fade = 0.1f);

        /// <summary>
        /// Sets the volume of the voice or bus
        /// </summary>
        /// <param name="voiceID">The voice or bus ID to modify</param>
        /// <param name="volume">Volume level [0, 1]</param>
        /// <param name="fade">Fade duration in seconds</param>
        /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
        [DllImport("SaXAudio")]
        public static extern void SetVolume(Int32 voiceID, Single volume, Single fade = 0.1f, Boolean isBus = false);

        /// <summary>
        /// Sets the playback speed of the voice
        /// This will affect the pitch of the audio
        /// </summary>
        /// <param name="voiceID">The voice to modify</param>
        /// <param name="speed">Playback speed multiplier</param>
        /// <param name="fade">Fade duration in seconds</param>
        [DllImport("SaXAudio")]
        public static extern void SetSpeed(Int32 voiceID, Single speed, Single fade = 0.1f);

        /// <summary>
        /// Sets the panning of the voice
        /// </summary>
        /// <param name="voiceID">The voice to modify</param>
        /// <param name="panning">Pan position [-1, 1] where -1 is full left, 1 is full right</param>
        /// <param name="fade">Fade duration in seconds</param>
        [DllImport("SaXAudio")]
        public static extern void SetPanning(Int32 voiceID, Single panning, Single fade = 0.1f);

        /// <summary>
        /// Sets if the voice should loop
        /// </summary>
        /// <param name="voiceID">The voice to modify</param>
        /// <param name="looping">true to enable looping, false to disable</param>
        [DllImport("SaXAudio")]
        public static extern void SetLooping(Int32 voiceID, Boolean looping);

        /// <summary>
        /// Sets the start and end looping points
        /// By default the looping points are [0, last sample]
        /// </summary>
        /// <param name="voiceID">The voice to modify</param>
        /// <param name="start">Loop start position in samples</param>
        /// <param name="end">Loop end position in samples</param>
        [DllImport("SaXAudio")]
        public static extern void SetLoopPoints(Int32 voiceID, UInt32 start, UInt32 end);

        /// <summary>
        /// Get the master volume
        /// </summary>
        /// <returns>Master volume [0, 1]</returns>
        [DllImport("SaXAudio")]
        public static extern Single GetMasterVolume();

        /// <summary>
        /// Gets the volume of the specified voice
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>Volume level [0, 1]</returns>
        [DllImport("SaXAudio")]
        public static extern Single GetVolume(Int32 voiceID);

        /// <summary>
        /// Gets the speed of the specified voice
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>Playback speed multiplier</returns>
        [DllImport("SaXAudio")]
        public static extern Single GetSpeed(Int32 voiceID);

        /// <summary>
        /// Gets the panning of the specified voice
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>Pan position [-1, 1] where -1 is full left, 1 is full right</returns>
        [DllImport("SaXAudio")]
        public static extern Single GetPanning(Int32 voiceID);

        /// <summary>
        /// Gets whether the specified voice is looping
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>true if looping is enabled, false otherwise</returns>
        [DllImport("SaXAudio")]
        public static extern Boolean GetLooping(Int32 voiceID);

        /// <summary>
        /// Gets the loop start point
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>Loop start position in samples</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetLoopStart(Int32 voiceID);

        /// <summary>
        /// Gets the loop end point
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>Loop end position in samples</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetLoopEnd(Int32 voiceID);

        /// <summary>
        /// Add/Modify the reverb effect to a voice or bus
        /// </summary>
        /// <param name="voiceID">The voice or bus ID to modify</param>
        /// <param name="reverbParams">Reverb parameters</param>
        /// <param name="fade">Fade duration in seconds</param>
        /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
        [DllImport("SaXAudio")]
        public static extern void SetReverb(Int32 voiceID, ReverbParameters reverbParams, Single fade = 0, Boolean isBus = false);

        /// <summary>
        /// Remove the reverb effect from a voice or bus
        /// </summary>
        /// <param name="voiceID">The voice or bus ID to modify</param>
        /// <param name="fade">Fade duration in seconds</param>
        /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
        [DllImport("SaXAudio")]
        public static extern void RemoveReverb(Int32 voiceID, Single fade = 0, Boolean isBus = false);

        /// <summary>
        /// Add/Modify the EQ effect to a voice or bus
        /// </summary>
        /// <param name="voiceID">The voice or bus ID to modify</param>
        /// <param name="eqParams">EQ parameters</param>
        /// <param name="fade">Fade duration in seconds</param>
        /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
        [DllImport("SaXAudio")]
        public static extern void SetEq(Int32 voiceID, EqParameters eqParams, Single fade = 0, Boolean isBus = false);

        /// <summary>
        /// Remove the EQ effect from a voice or bus
        /// </summary>
        /// <param name="voiceID">The voice or bus ID to modify</param>
        /// <param name="fade">Fade duration in seconds</param>
        /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
        [DllImport("SaXAudio")]
        public static extern void RemoveEq(Int32 voiceID, Single fade = 0, Boolean isBus = false);

        /// <summary>
        /// Add/Modify the echo effect to a voice or bus
        /// </summary>
        /// <param name="voiceID">The voice or bus ID to modify</param>
        /// <param name="echoParams">Echo parameters</param>
        /// <param name="fade">Fade duration in seconds</param>
        /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
        [DllImport("SaXAudio")]
        public static extern void SetEcho(Int32 voiceID, EchoParameters echoParams, Single fade = 0, Boolean isBus = false);

        /// <summary>
        /// Remove the echo effect from a voice or bus
        /// </summary>
        /// <param name="voiceID">The voice or bus ID to modify</param>
        /// <param name="fade">Fade duration in seconds</param>
        /// <param name="isBus">true if voiceID refers to a bus, false for voice</param>
        [DllImport("SaXAudio")]
        public static extern void RemoveEcho(Int32 voiceID, Single fade = 0, Boolean isBus = false);

        /// <summary>
        /// Gets the position of the playing voice in samples
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>sample position if playing or 0</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetPositionSample(Int32 voiceID);

        /// <summary>
        /// Gets the position of the playing voice in seconds
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>position in seconds if playing or 0</returns>
        [DllImport("SaXAudio")]
        public static extern Single GetPositionTime(Int32 voiceID);

        /// <summary>
        /// Gets the total amount of samples of the voice
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>Total number of samples in the audio</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetTotalSample(Int32 voiceID);

        /// <summary>
        /// Gets the total time, in seconds, of the voice
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>Total duration in seconds</returns>
        [DllImport("SaXAudio")]
        public static extern Single GetTotalTime(Int32 voiceID);

        /// <summary>
        /// Get the sample rate of the audio data
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>sample rate in Hz</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetSampleRate(Int32 voiceID);

        /// <summary>
        /// Get the number of channels of the audio data
        /// </summary>
        /// <param name="voiceID">The voice to query</param>
        /// <returns>number of channels (1=mono, 2=stereo, etc)</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetChannelCount(Int32 voiceID);

        /// <summary>
        /// Get the number of voices
        /// </summary>
        /// <returns>Number of currently active voices</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetVoiceCount();

        /// <summary>
        /// Get the number of loaded audio banks
        /// </summary>
        /// <returns>Number of loaded banks</returns>
        [DllImport("SaXAudio")]
        public static extern UInt32 GetBankCount();

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void OnDecodedDelegate(Int32 bankID, IntPtr buffer);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void OnFinishedDelegate(Int32 voiceID);
